[project]
name = "genai-llm-rag-ai-agents-tutorials"
version = "0.1.0"
description = ""
authors = [
    {name = "sazzadabdulhasib",email = "sazzad@getdrop.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "tiktoken (>=0.12.0,<0.13.0)",
    "chromadb (>=1.3.5,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-openai (>=1.0.3,<2.0.0)",
    "langchainhub (>=0.1.21,<0.2.0)",
    "langchain (>=1.0.7,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
