[tool.poetry]
name = "genai-llm-rag-ai-agents-tutorials"
version = "0.1.0"
description = "GenAI, LLM, RAG, and AI Agents Tutorials"
authors = ["sazzadabdulhasib <sazzad@getdrop.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
tiktoken = "^0.12.0"
chromadb = "^1.3.5"
langchain-community = "^0.4.1"
langchain-openai = "^1.0.3"
langchainhub = "^0.1.21"
langchain = "^1.0.7"
python-dotenv = "^1.2.1"
bs4 = "^0.0.2"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.13.0"
flake8 = "^7.1.1"
pre-commit = "^4.4.0"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 110
target-version = ['py313']

[tool.isort]
line_length = 110
known_first_party = ["tests", "rag_systems"]
multi_line_output = 3
force_grid_wrap = 0
combine_as_imports = true
include_trailing_comma = true
force_sort_within_sections = true
no_lines_before = 'LOCALFOLDER'
profile = "black"
skip = [".venv", ".virtualenvs", "cdk.out", "node_modules"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
exclude = [".venv/", ".virtualenvs/"]
show_error_codes = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unreachable = true
strict_optional = true

[tool.pyright]
reportGeneralTypeIssues = false
exclude = [".venv/", "node_modules/", ".pytest_cache/"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = [".", "rag_systems"]
